--- a/_posts/2019-03-23-Imputing_Categories.Rmd
+++ b/_posts/2019-03-23-Imputing_Categories.Rmd
@@ -6,7 +6,7 @@ header:
   image: "/images/credit_fraud/CFD.png"
 excerpt: "Machine learning, Local Outlier Factor (LOF), Isolation Forest Algorithm"
 mathjax: "true"
-output: html_document
+output: github_document
 ---
 
 
